syntax = "proto3";
package orders;

theme "orders.proto";

service OrderService {
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
}

message ListOrdersRequest {}

message Order {
  int32 id = 1;
  string customer_name = 2;
  string created_at = 3;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}